<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="a">General</string>
    <string name="b">Privacy</string>
    <string name="c">Advanced</string>
    <string name="d">Background</string>
    <string name="e">Search</string>
    <string name="f">Downloads</string>
    <string name="g">Accessibility</string>
    <string name="h">Dark Theme</string>
    <string name="i">Videos</string>
    <string name="j">Source Code</string>
    <string name="k">Webvium Content</string>
    <string name="l">About</string>
    <string name="m">Zoom Controls</string>
    <string name="n">Homepage</string>
    <string name="o">UI</string>
    <string name="p">Screen Orientation</string>
    <string name="q">Set Homepage</string>
    <string name="r">Block Images &amp; Video Thumbnails</string>
    <string name="s">Play videos when you hover over the video thumbnail</string>
    <string name="t">Tab Queue</string>
    <string name="u">Copy</string>
    <string name="v">Continue where you left off</string>
    <string name="w">Remind Me to Take a Break</string>
    <string name="x">Set Reminder</string>
    <string name="y">Mics</string>
    <string name="z">Cookies</string>
    <string name="a1">Form Data</string>
    <string name="a2">Location</string>
    <string name="a4">Enable Cookies</string>
    <string name="a5">Set UI</string>
    <string name="a6">Set Screen Orientation</string>
    <string name="a8">Share</string>
    <string name="a9">Show Webpage Title</string>
    <string name="a10">Always show webpage title in toolbar</string>
    <string name="a13">Delete</string>
    <string name="a14">Details</string>
    <string name="a15">Clears any saved data for web forms</string>
    <string name="a16">Screen Timeout</string>
    <string name="a17">Set Screen Timeout</string>
    <string name="a18">Hold Back</string>
    <string name="a19">Set Hold Back Action</string>
    <string name="a20">Search Providers</string>
    <string name="b1">Search Engines</string>
    <string name="b2">Set Search Engines</string>
    <string name="b3">Voice</string>
    <string name="b4">Voice Search</string>
    <string name="b5">Show Search Suggestion</string>
    <string name="b6">Sort</string>
    <string name="b7">&lt;b>Title:&lt;/b> %1$s&lt;br>&lt;b>Link:&lt;/b> %2$s&lt;br>&lt;br>&lt;b>Issued To:&lt;/b>&lt;br>&lt;b>Common Name:&lt;/b> %3$s&lt;br>&lt;b>Organization:&lt;/b> %4$s&lt;br>&lt;b>Organizational Unit:&lt;/b> %5$s&lt;br>&lt;br>&lt;b>Issued By:&lt;/b>&lt;br>&lt;b>Common Name:&lt;/b> %6$s&lt;br>&lt;b>Organization:&lt;/b> %7$s&lt;br>&lt;b>Organizational Unit:&lt;/b> %8$s&lt;br>&lt;br>&lt;b>Validity:&lt;/b>&lt;br>&lt;b>Issued On:&lt;/b> %9$s&lt;br>&lt;b>Expires On:&lt;/b> %10$s</string>
    <string name="b9">Open Downloads on Start</string>
    <string name="b10">Download manager will launch when a download started</string>
    <string name="b11">Open Downloads on Finish</string>
    <string name="b12">Download manager will launch when a download finished</string>
    <string name="b13">Download Files Automatically</string>
    <string name="b14">Download over Wi-Fi Only</string>
    <string name="b16">Show Demo</string>
    <string name="b18">Restore Default Settings</string>
    <string name="b19">Reset to Default</string>
    <string name="b20">Reset</string>
    <string name="c1">Webpage Debugging</string>
    <string name="c2">Do Not Track</string>
    <string name="c3">Include a DNT header when you load a webpage</string>
    <string name="c4">Set Security Lock</string>
    <string name="c5">Enable Security Lock</string>
    <string name="c6">Set Up Security Lock</string>
    <string name="c8">JavaScript</string>
    <string name="c9">Enable JavaScript</string>
    <string name="c10">Set JavaScript</string>
    <string name="c11">Prompt</string>
    <string name="c12">Display a javascript prompt dialog</string>
    <string name="c13">Alert</string>
    <string name="c14">Display a javascript alert dialog</string>
    <string name="c15">Confirm</string>
    <string name="c16">Display a javascript confirm dialog</string>
    <string name="c17">Performance &amp; Quality</string>
    <string name="c18">Set Text Encoding</string>
    <string name="c19">Text Encoding</string>
    <string name="c20">Device Media Projection</string>
    <string name="d1">Overview Mode</string>
    <string name="d2">WideViewPort</string>
    <string name="d3">DOM Storage</string>
    <string name="d4">Database Storage</string>
    <string name="d5">Load webpage in overview mode</string>
    <string name="d6">Load webpage in HTML viewport or wideviewport</string>
    <string name="d7">Allow webpage to use Database Storage APIs</string>
    <string name="d8">Allow webpage to use DOM Storage APIs</string>
    <string name="d9">Display a dialog to confirm navigation away from the current page</string>
    <string name="d10">Before Unload</string>
    <string name="d11">Clear Cache</string>
    <string name="d12">Clear Browsing History</string>
    <string name="d13">Pause Browsing History</string>
    <string name="d14">Clear Search History</string>
    <string name="d15">Pause Search History</string>
    <string name="d16">User-Agent</string>
    <string name="d17">Set User-Agent</string>
    <string name="d18">Custom User-Agent</string>
    <string name="d19">SSL Error</string>
    <string name="d20">There\'s no console message\'s to show.</string>
    <string name="e2">Receive SSL Error</string>
    <string name="e3">SSL error occurred while loading a resource</string>
    <string name="e4">Clear SSL Preference</string>
    <string name="e5">Credentials</string>
    <string name="e6">Clear HTTP Auth Username and Password</string>
    <string name="e7">Clear on Exit</string>
    <string name="e8">Clear Private Data</string>
    <string name="e9">Private data will clear whenever you exit</string>
    <string name="e10">Clear Cache</string>
    <string name="e11">Cache will clear whenever you exit</string>
    <string name="e12">Clear History</string>
    <string name="e13">History will clear whenever you exit</string>
    <string name="e14">Clear Clipboard</string>
    <string name="e15">Clipboard will clear whenever you exit</string>
    <string name="e16">Set Cookies</string>
    <string name="e17">Clear Cookies</string>
    <string name="e18">Remember Form Data</string>
    <string name="e19">Set Remember Form Data</string>
    <string name="e20">Clear Remember Form Data</string>
    <string name="f1">Enable Location</string>
    <string name="f2">Set Location</string>
    <string name="f3">Clear Location</string>
    <string name="f4">Remove all cookies</string>
    <string name="f5">Remove all cookies that doesn\'t have an expiration date</string>
    <string name="f6">Cache</string>
    <string name="f7">Cache Mode</string>
    <string name="f8">Set Cache Mode</string>
    <string name="f10">Captions</string>
    <string name="f11">Content to Captured</string>
    <string name="f12">Terms and Conditions</string>
<string name="f13">You agreed on %1$s</string>
    <string name="f14">Feedback</string>
    <string name="f16">Databases, cache, cookies</string>
    <string name="f17">Clears all storage currently being used by the JavaScript storage APIs. This includes the Application Cache, Web SQL Database and the HTML5 Web Storage APIs.</string>
    <string name="g3">Clears any saved credentials for HTTP authentication</string>
    <string name="g4">Enables debugging of web contents (HTML / CSS / JavaScript)</string>
    <string name="g5">These terms and conditions (\"Terms\", \"Conditions\") are condition between Mrepol742 (\"Melvin Jones Repol\", \"us\", \"we\" or \"our\") and you (\"user\", \"you\" or \"your\")</string>
    <string name="g6">PIN</string>
    <string name="g7">Text Selection</string>
    <string name="g9">Layer Type</string>
    <string name="g10">Set Layer Type</string>
    <string name="g11">Zoom Gesture</string>
    <string name="g12">None</string>
    <string name="g13">Show zoom controls panel</string>
    <string name="g14">Text Size</string>
    <string name="g15">Main Window Background</string>
    <string name="g16">Custom Background Image</string>
    <string name="g17">Select custom background image</string>
    <string name="g18">Battery Optimization</string>
    <string name="g19">&lt;b>Link:&lt;/b> %1$s&lt;br>&lt;b>Error Code:&lt;/b> %2$d</string>
    <string name="g20">This URL %1$s contains Ads that was blocked by Webvium AdBlocker.</string>
    <string name="h1">Safe Browsing</string>
    <string name="h2">Quit</string>
    <string name="h3">Settings</string>
    <string name="h4">Console Message</string>
    <string name="h5">%1$s removed.</string>
    <string name="h6">NSLookup</string>
    <string name="h7">View IP</string>
    <string name="h9">Stop</string>
    <string name="h10">Tools</string>
    <string name="h11">Bookmarks</string>
    <string name="h12">Homescreen</string>
    <string name="h14">Refresh</string>
    <string name="h15">Disable Security Lock</string>
    <string name="h16">Downloads</string>
    <string name="h17">Add to</string>
    <string name="h18">History</string>
    <string name="h19">Share</string>
    <string name="h20">Desktop</string>
    <string name="i2">Paste and Search</string>
    <string name="i3">Paste</string>
    <string name="i4">Save Link</string>
    <string name="i6">OK</string>
    <string name="i7">Cancel</string>
    <string name="i9">Search History</string>
    <string name="i11">Clear All History</string>
    <string name="i12">Clear All Bookmarks</string>
    <string name="i13">Clear Bookmarks</string>
    <string name="i14">Continue</string>
    <string name="l17">Notify to Open Valid Link</string>
    <string name="m5">Clipboard</string>
    <string name="m8">Set Up Pretend Mode</string>
    <string name="o18">Custom Text Encoding</string>
    <string name="o19">Slow Whole Document Draw</string>
    <string name="o20">Reduces memory footprint and increases performance</string>
    <string name="SWIT">Mixed Content Mode</string>
    <string name="p2">Set Mixed Content Mode</string>
    <string name="p4">Renderer Priority Policy</string>
    <string name="p5">Set Renderer Priority Policy</string>
    <string name="w6">Sets whether the Application Caches APIs should be enabled</string>
    <string name="x10">Show a notification when you copy a url</string>
    <string name="z6">Clear Session Cookies</string>
    <string name="a22">Security</string>
    <string name="a23">Device Admin</string>
    <string name="a24">Make Webvium as one of your administrator</string>
    <string name="a30">Clear JavaScript Storage APIs</string>
    <string name="i36">Vibrate</string>
    <string name="i37">Vibration Effect</string>
    <string name="k39">Force HTTPS</string>
    <string name="k40">Override URL loading in HTTPS</string>
    <string name="l32">Floating Webvium</string>
    <string name="m28">Set Vibration EffectL</string>
    <string name="p29">Request Headers</string>
    <string name="s28">Don\'t render the webpage images and video thumbnails to make the load much faster on low memory devices.</string>
    <string name="s29">JavaScript Storage</string>
    <string name="s30">Application Storage</string>
    <string name="t21">Backup</string>
    <string name="t24">Cookie</string>
    <string name="t25">Include Cookie when requesting download</string>
    <string name="t26">Include User-agent when requesting download</string>
    <string name="t27">Mime Type</string>
    <string name="t28">Connection</string>
    <string name="t29">Metered</string>
    <string name="t30">Allow to downloads over the metered connection</string>
    <string name="t31">Roaming</string>
    <string name="t32">Allow to downloads over the roaming connection</string>
    <string name="t38">Media Scanning</string>
    <string name="t39">Allow media scanning when download finish</string>
</resources>