<!--
  ~
  ~ Created by Melvin Jones Repol on 4/17/21 10:27 AM
  ~ Copyright (c) 2021 . All rights reserved. Melvin Jones Repol(mrepol742.github.io)
  ~ Last modified 4/17/21 10:27 AM
  ~
  ~  License under the GNU General Public License, Version 3.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
  ~  https://www.gnu.org/licenses/gpl-3.0.en.html
  ~  Unless required by the applicable law or agreed in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  -->

<!--suppress ALL -->
<PreferenceScreen xmlns:a="http://schemas.android.com/apk/res/android">

    <com.mrepol742.webvium.SWIT
        a:defaultValue="false"
        a:key="webP"
        a:summary="@string/g4"
        a:title="@string/c1" />
    <com.mrepol742.webvium.SWIT
        a:defaultValue="true"
        a:key="dont"
        a:summary="@string/c3"
        a:title="@string/c2" />

    <com.mrepol742.webvium.PREF0 a:title="@string/a22">
        <com.mrepol742.webvium.PREF
            a:key="admn"
            a:summary="@string/a24"
            a:title="@string/a23" />
        <com.mrepol742.webvium.SWIT
            a:defaultValue="false"
            a:key="flvht"
            a:summary="@string/k40"
            a:title="@string/k39" />
        <com.mrepol742.webvium.PREF
            a:key="wLock"
            a:title="@string/c6" />
        <com.mrepol742.webvium.PREF
            a:key="wPretend"
            a:title="@string/m8" />
    </com.mrepol742.webvium.PREF0>

    <com.mrepol742.webvium.PREF0 a:title="@string/c8">
        <com.mrepol742.webvium.LIST
            a:defaultValue="1f"
            a:dialogTitle="@string/c10"
            a:entries="@array/m"
            a:entryValues="@array/n"
            a:key="java"
            a:summary="%1$s"
            a:title="@string/c9" />
        <com.mrepol742.webvium.SWIT
            a:defaultValue="true"
            a:key="Java9"
            a:summary="@string/c12"
            a:title="@string/c11" />
        <com.mrepol742.webvium.SWIT
            a:defaultValue="true"
            a:key="Java10"
            a:summary="@string/c14"
            a:title="@string/c13" />
        <com.mrepol742.webvium.SWIT
            a:defaultValue="true"
            a:key="Java11"
            a:summary="@string/c16"
            a:title="@string/c15" />
        <com.mrepol742.webvium.SWIT
            a:defaultValue="true"
            a:key="Java12"
            a:summary="@string/d9"
            a:title="@string/d10" />

    </com.mrepol742.webvium.PREF0>
    <com.mrepol742.webvium.PREF0 a:title="@string/k">
        <com.mrepol742.webvium.SWIT
            a:defaultValue="false"
            a:key="open"
            a:summary="@string/d5"
            a:title="@string/d1" />
        <com.mrepol742.webvium.SWIT
            a:defaultValue="false"
            a:key="open1"
            a:summary="@string/d6"
            a:title="@string/d2" />
        <com.mrepol742.webvium.SWIT
            a:defaultValue="true"
            a:key="open2"
            a:summary="@string/d8"
            a:title="@string/d3" />
        <com.mrepol742.webvium.SWIT
            a:defaultValue="true"
            a:key="open3"
            a:summary="@string/d7"
            a:title="@string/d4" />
        <com.mrepol742.webvium.SWIT
            a:defaultValue="true"
            a:key="open4"
            a:summary="@string/w6"
            a:title="@string/s30" />
        <com.mrepol742.webvium.SWIT
            a:defaultValue="true"
            a:key="textST"
            a:title="@string/g7" />
        <com.mrepol742.webvium.LIST
            a:defaultValue="1a"
            a:dialogTitle="@string/c18"
            a:entries="@array/c"
            a:entryValues="@array/d"
            a:key="textE"
            a:summary="%1$s"
            a:title="@string/c19" />
        <com.mrepol742.webvium.EDIT0
            a:ellipsize="end"
            a:key="CtextE"
            a:maxLines="1"
            a:title="@string/o18" />
        <com.mrepol742.webvium.LIST
            a:defaultValue="30r"
            a:dialogTitle="@string/p2"
            a:entries="@array/a13"
            a:entryValues="@array/a14"
            a:key="mcm"
            a:summary="%1$s"
            a:title="@string/SWIT" />
        <com.mrepol742.webvium.SWIT
            a:defaultValue="false"
            a:key="fltWeb"
            a:title="@string/l32" />
    </com.mrepol742.webvium.PREF0>

    <com.mrepol742.webvium.PREF0 a:title="@string/c17">
        <com.mrepol742.webvium.LIST
            a:defaultValue="7l"
            a:dialogTitle="@string/g10"
            a:entries="@array/y"
            a:entryValues="@array/z"
            a:key="setLT"
            a:summary="%1$s"
            a:title="@string/g9" />

        <com.mrepol742.webvium.SWIT
            a:defaultValue="false"
            a:key="enableSWDD"
            a:summary="@string/o20"
            a:title="@string/o19" />

        <com.mrepol742.webvium.SWIT
            a:defaultValue="false"
            a:key="block"
            a:summary="@string/s28"
            a:title="@string/r" />
    </com.mrepol742.webvium.PREF0>


</PreferenceScreen>
